@@ -1,3 +1,7 @@
+2006-04-10 Gonzalo Paniagua Javier <gonzalo@ximian.com>
+
+	* HttpUtilityTest.cs: new tests. Patch by Vladimir Krasnov.
+
 2006-03-27 Gonzalo Paniagua Javier <gonzalo@ximian.com>
 
 	* HttpUtilityTest.cs: test from bug #77931.
